WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114815
FrameLoaderClientBlackBerry.cpp should pass through an actual error code when calling notifyLoadFinished
https://bugs.webkit.org/show_bug.cgi?id=114815
Summary
FrameLoaderClientBlackBerry.cpp should pass through an actual error code when...
edbaker
Reported
2013-04-18 08:31:56 PDT
It's just 0 or -1 depending on if an error occurred. Passing through the actual error code will be more useful.
Attachments
Patch
(1.70 KB, patch)
2013-04-18 09:18 PDT
,
edbaker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
edbaker
Comment 1
2013-04-18 09:18:53 PDT
Created
attachment 198743
[details]
Patch
Rob Buis
Comment 2
2013-04-18 10:27:42 PDT
Comment on
attachment 198743
[details]
Patch Makes sense.
WebKit Commit Bot
Comment 3
2013-04-18 10:54:07 PDT
Comment on
attachment 198743
[details]
Patch Clearing flags on attachment: 198743 Committed
r148685
: <
http://trac.webkit.org/changeset/148685
>
WebKit Commit Bot
Comment 4
2013-04-18 10:54:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug