[BlackBerry] Should pass through an actual error code when calling notifyLoadFinished https://bugs.webkit.org/show_bug.cgi?id=114815

Patch by Ed Baker <edbaker@blackberry.com> on 2013-04-18
Reviewed by Rob Buis.

PR #318079

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::postProgressFinishedNotification):

Canonical link: https://commits.webkit.org/133207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148685 268f45cc-cd09-0410-ab3c-d52691b4dbfc